--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=naturalia-backend
+spring.datasource.url=jdbc:postgresql://dpg-d0mef5pr0fns73bmknb0-a.oregon-postgres.render.com:5432/naturaliadb
+spring.datasource.username=naturalia
+spring.datasource.password=WzNEXVyUoC9koTf25APYLKvymn1NRJUt
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
