Use environment variables for DB and Mail config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
+# === Base de datos ===
 spring.datasource.url=jdbc:postgresql://dpg-d0mef5pr0fns73bmknb0-a.oregon-postgres.render.com:5432/naturaliadb
-spring.datasource.username=naturalia
-spring.datasource.password=WzNEXVyUoC9koTf25APYLKvymn1NRJUt
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
+# === Correo (Gmail) ===
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
