rama preparada para test y H2 no produccion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-spring.datasource.url=jdbc:postgresql://dpg-d0mef5pr0fns73bmknb0-a.oregon-postgres.render.com:5432/naturaliadb
-spring.datasource.username=naturalia
-spring.datasource.password=WzNEXVyUoC9koTf25APYLKvymn1NRJUt
+# PostgreSQL (comentado)
+# spring.datasource.url=jdbc:postgresql://...
+# spring.datasource.username=...
+# spring.datasource.password=...
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# Configuración H2 para pruebas
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.sql.init.mode=never
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
+# Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
